--- a/accessories.html
+++ b/accessories.html
@@ -20,59 +20,78 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     </head>
 
+    <!--Body section-->
+    <!--Contains the content of the page-->
     <body>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
-            <a class="navbar-brand" href="index.html">
-              <img id="navbar_logo" src="images/main_images/logo_index.png" alt="Logo" style="height: 50px">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link nav-text" href="index.html">Home</a>
-                </li>
-                    <!-- Dropdown -->
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle nav-text" href="#" id="navbardrop" data-toggle="dropdown">Products</a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item nav-text" href="pianos.html">Pianos</a>
-                    <a class="dropdown-item nav-text" href="guitars.html">Guitars</a>
-                    <a class="dropdown-item nav-text" href="basses.html">Basses</a>
-                    <a class="dropdown-item nav-text" href="drums_percussions.html">Drums/Percussion</a>
-                    <a class="dropdown-item nav-text" href="sound.html">Sound</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link nav-text" href="accessories.html">Accessories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-text" href="contact_us.html">Contact Us</a>
-                </li>     
-              </ul>
-            </div>  
-        </nav>
+      <!--Navigation bar-->
+      <!--Contains all the different links to the different pages-->
+      <!--Also becomes collapsable when working shrinking screen-->
+      <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+          <!--Logo connected to index page-->
+          <a class="navbar-brand" href="index.html">
+            <img id="navbar_logo" src="images/main_images/logo_index.png" alt="Logo" style="height: 50">
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!--Link to index page of the website-->
+          <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link nav-text" href="index.html">Home</a>
+              </li>
+                  <!-- Dropdown Menu containing diffferent links for product pages-->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle nav-text" href="#" id="navbardrop" data-toggle="dropdown">Products</a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item nav-text" href="pianos.html">Pianos</a>
+                  <a class="dropdown-item nav-text" href="guitars.html">Guitars</a>
+                  <a class="dropdown-item nav-text" href="basses.html">Basses</a>
+                  <a class="dropdown-item nav-text" href="drums_percussions.html">Drums/Percussion</a>
+                  <a class="dropdown-item nav-text" href="sound.html">Sound</a>
+                </div>
+                <!--Link to accessories page of the website-->
+              </li>
+              <li class="nav-item">
+                <a class="nav-link nav-text" href="accessories.html">Accessories</a>
+              </li>
+              <!--Link to contact us page of the website-->
+              <li class="nav-item">
+                  <a class="nav-link nav-text" href="contact_us.html">Contact Us</a>
+              </li>     
+            </ul>
+          </div>  
+      </nav>
 
+        <!--Container in the Accessories Page-->
+        <!--Set to fluid to stretch information to edge of the page without having overflow-->
+        <!--Contains Header, product images and price-->
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
                 <div id="centre_heading"><h1>Accessories</h1></div>
             </div>
           </div>
+          <!--Break in the code to add space between things-->
           <br></br>
           <div class="row">
+            <!--Row containing 4 different products-->
+            <!--Using Card to show all information-->
             <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
+                    <!--First Image connected to the card with alt tag-->
                     <img class="card-img-top-2" src="images/accessories/boss_chorus_pedal.jpg" alt="Boss Chorus Pedal">
+                    <!--Name of Product and Price-->
                     <div class="card-body">
                         <h2>Boss Chorus Pedal</h2>
                         <h3>$60.50</h3>
                         <p><span class="badge badge-pill badge-success">92</span></p>
+                        <!--Add to cart button-->
                         <a href="" class="btn btn-primary">Add to cart</a>
                     </div>
                 </div>
             </div>
+            <!--Repeat of first product code, tailered to next product-->
             <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/fender_reverb_pedal.jpg" alt="Fender Reverb Pedal">
@@ -84,6 +103,7 @@
                   </div>
               </div>
             </div>
+            <!--Repeat of first product code, tailered to next product-->
             <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/boss_foot_volume_pedal.jpg" alt="Boss Volume Pedal">
@@ -95,6 +115,7 @@
                   </div>
               </div>
             </div>
+            <!--Repeat of first product code, tailered to next product-->
             <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
               <div class="card-2 mb-4">
                   <img class="card-img-top-2" src="images/accessories/vox_wha_wha_pedal.jpg" alt="Vox Wha Wha Pedal">
@@ -107,8 +128,11 @@
               </div>
             </div>
           </div>
+          <!--Break in the code to add space between things-->
           <br></br>
+          <!--next row of products-->
             <div class="row">
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                   <div class="card-2 mb-4">
                       <img class="card-img-top-2" src="images/accessories/9m_balanced_xlr_cable.jpg" alt="9M Balanced XLR Cable">
@@ -120,6 +144,7 @@
                       </div>
                   </div>
               </div>
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/15m_balanced_xlr_cable.jpg" alt="15M Balanced XLR Cable">
@@ -131,6 +156,7 @@
                     </div>
                 </div>
               </div>
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/3m_fender_guitar_jack.jpg" alt="3M Fender Guitar Cable">
@@ -142,6 +168,7 @@
                     </div>
                 </div>
               </div>
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/5.5m_fender_guitar_jack.jpg" alt="5.5M Fender Guitar Cable">
@@ -154,8 +181,11 @@
                 </div>
               </div>
             </div>
+            <!--Break in the code to add space between things-->
             <br></br>
+            <!--next row of products-->
             <div class="row">
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                   <div class="card-2 mb-4">
                       <img class="card-img-top-2" src="images/accessories/1.5m_red_white_cable.jpg" alt="1.5M Red and White Audio Cable">
@@ -167,6 +197,7 @@
                       </div>
                   </div>
               </div>
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/artist_aframe_guitar_stand.jpg" alt="Artist Aframe Guitar Stand">
@@ -178,6 +209,7 @@
                     </div>
                 </div>
               </div>
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/boom_microphone_stand_3axis.jpg" alt="Boom Microphone Stand">
@@ -189,6 +221,7 @@
                     </div>
                 </div>
               </div>
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/orchestral_music_stand.jpg" alt="Orchestral Music Stand">
@@ -201,8 +234,11 @@
                 </div>
               </div>
             </div>
+            <!--Break in the code to add space between things-->
             <br></br>
+            <!--next row of products-->
             <div class="row">
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                   <div class="card-2 mb-4">
                       <img class="card-img-top-2" src="images/accessories/akg_p170_small_condenser.jpg" alt="AKG P170 Small Condenser">
@@ -214,6 +250,7 @@
                       </div>
                   </div>
               </div>
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/shure_ksm137_pair_condensers.jpg" alt="Shure KSM137 Pair Condensers">
@@ -225,6 +262,7 @@
                     </div>
                 </div>
               </div>
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/shure_vocal_cardioid_mic.jpg" alt="Shure Vocal Cardioid Mic">
@@ -236,6 +274,7 @@
                     </div>
                 </div>
               </div>
+              <!--Repeat of first product code, tailered to next product-->
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
                     <img class="card-img-top-2" src="images/accessories/sennheiser_e_845_vocal.jpg" alt="Sennheiser E845 Vocal Mic">
@@ -250,7 +289,10 @@
             </div>
           </div>  
         </div>
+        <!--Break in the code to add space between things-->
+        <br></br>
 
+        <!--Button to go to the top of the page, Button name: top-->
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         
         <script>
@@ -275,6 +317,9 @@
           }
         </script>
         
+        <!--Footer Class-->
+        <!--Contains different links to different pages and social media-->
+        <!--Broken up into 4 different columns: Logo, Company Info, Products, Social Media-->
         <div class="footer">
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
